# DSG-SpatialQA

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
docs/: AI_RUNBOOK.md  VERIFICATION.md  architecture.md  benchmark_format.md  real_small_experiment.md  real_small_experiment_status.md  roadmap.md
external_tools/: collect_ai2thor_coverage.py  run_vlm_controls.py  run_vlm_detector_rgbd.py  run_vlm_graph_adjudication_active.py
scripts/: analyze_qa_observability.py  assemble_real_experiment.py  attribute_active_qa_v2_cases.py  attribute_errors.py  audit_active_qa_v2_request_bundle.py  audit_active_qa_v2_target_crop_feasibility.py  audit_qa_quality.py  audit_reachable_nbv_all_episodes.py  audit_trajectory_coverage.py  build_active_exploration_qa_v2.py  build_active_qa_v2_graph_tool_predictions.py  build_active_qa_v2_missing_prediction_request_bundle.py  build_adjudication_derived_trusted_fusion.py  build_benchmark.py  build_dsg_detector_recall_handoff.py  build_observation_aware_qa.py  build_oracle_graph.py  build_predicted_graph.py  build_qa_v2.py  build_vlm_graph_evidence.py  check_determinism.py  check_offline_controls.py  check_predicted_dsg.py  check_real_collection.py  check_real_experiment.py  collect_ai2thor.py  collect_habitat.py  compare_active_qa_v2_three_way.py  compare_reachable_nbv_all_episodes.py  compare_trajectory_protocols.py  conclude_experiment.py  enrich_active_qa_v2_request_bundle_with_target_crops.py  episodes.py  eval_vlm_calibration.py  evaluate.py  evaluate_graphs.py  evaluate_vlm_graph_adjudication.py  export_dashboard.py  (+28 more)
(+10682 files in other folders)
