[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsg-spatialqa-lab"
version = "0.1.0"
description = "Deterministic MVP for Dynamic Scene Graph Spatial QA."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ai2thor = [
  "ai2thor",
]
habitat = []
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dsg_spatialqa_lab = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
